Remove ES6 code so I can run it on Safari and old Node

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ function fib(n) {
 }
 
 function doHardWorkFor (cycles) {
-  const start = new Date().getTime();
+  var start = new Date().getTime();
 
   fib(cycles);
 }
 
 function sum (set) {
-  return set.reduce((t, n) => t + n, 0);
+  return set.reduce(function (t, n) { return t + n; }, 0);
 }
 
 function average (set) {
@@ -30,14 +30,14 @@ function average (set) {
 }
 
 var samples = [];
-const Interval = 100;
+var Interval = 100;
 
-var id = setInterval(() => {
+var id = setInterval(function () {
   samples.push(new Date().getTime());
   doHardWorkFor(2000000);
 }, Interval);
 
-setTimeout(() => {
+setTimeout(function () {
   clearInterval(id);
 
   var diff = [];
